# tinymlws-20260516

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
demo/common/: AppFeedBase.hpp  AppInferenceBase.hpp
demo/ei-img-classification/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.esp32s3  sdkconfig.wokwi
demo/ei-img-classification/main/: AppFeed.hpp  AppInference.hpp  CMakeLists.txt  idf_component.yml  main.cpp
demo/ei-img-classification/resources/: imgtoh.sh
demo/ei-keyword-spotting/: CMakeLists.txt  README.md  sdkconfig.esp32s3  sdkconfig.wokwi
demo/ei-keyword-spotting/main/: AppFeed.hpp  AppFeedBase.hpp  AppInference.hpp  AppInferenceBase.hpp  CMakeLists.txt  gm_sample.wav.h  main.cpp  unknown.6mq9gm71.wav.h
demo/ei-keyword-spotting/main/data/: gm_sample.wav.hpp  unknown.6mq9gm71.wav.hpp
demo/ei-keyword-spotting/main/model-parameters/: model_metadata.h  model_variables.h
demo/ei-keyword-spotting/main/tflite-model/: tflite_learn_972337_4_compiled.cpp  tflite_learn_972337_4_compiled.h
demo/ei-keyword-spotting/resources/: wavtoh.sh
demo/tflm-speech/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.wokwi
demo/tflm-speech/main/: AppFeatures.hpp  AppFeed.hpp  AppInference.hpp  CMakeLists.txt  main.cpp
demo/tflm-speech/main/model/: audio_provider.cc  audio_provider.h  feature_provider.cc
tools/: decode_backtrace.sh
